src/test/resources/parser/valid/equalsNum.sbsc
// test the equals operator ==

a = 2.1;
b = 2.1;

println(if(a == b) "bazinga" else "not bazinga");