src/test/resources/parser/invalid/coercion/stringEqualsNum.sbsc
// this is an invalid comparison.

a = "test";
b = 2.3;

println(if(a == b) "bazinga" else "not bazinga");

return false;